--- a/Modelware_projects/org.inria.UmlautNG.site/index.html
+++ b/Modelware_projects/org.inria.UmlautNG.site/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>org.inria.UmlautNG.site</title>
+<title>org.inria.UmlautNG.site UmlautNG update and recovery site</title>
 <style>@import url("web/site.css");</style>
 <script type="text/javascript">
 	var returnval = 0;
@@ -54,6 +54,15 @@
 </head>
 <body onload="init();">
 <!--[insert static HTML here]-->
+Update and discorevy URL to be used in Eclipse.<BR>
+Using this system you can easily install and keep your version of UmlautNG platform up-to-date.<BR>
+It includes:
+<UL><LI>BasicMTL compiler and runtime</LI>
+<LI>BasicMTL perspective and editor</LI>
+</UL>
 <div id="data"><!-- this is where the transformed data goes --></div>
+Note: If you don't see the links to the jar files, this is due to browser incopatibility. In this case, please try with another browser. Sorry for the inconvenience.
+<BR>
+<A href="http://modelware.inria.fr/mtl">back to MTL web page on modelware.inria.fr</A>
 </body>
 </html>
